# open-financeui

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
.agents/skills/Ollama/: SKILL.md
.agents/skills/anthropic-desing/: SKILL.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9ecfa8250357_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  budgets.py  categories.py  data.py  debts.py  investments.py  loans.py  reminders.py  savings_goals.py  summary.py  transactions.py  users.py
backend/app/core/: config.py  constants.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  base.py  budget.py  category.py  debt.py  investment.py  loan.py  reminder.py  savings_goal.py  transaction.py  user.py
backend/app/schemas/: auth.py  base.py  budget.py  category.py  debt.py  investment.py  loan.py  reminder.py  savings_goal.py  summary.py  transaction.py  user.py
backend/app/services/: seed.py
backend/docs/: api.md  architecture.md  auth.md  getting-started.md  testing.md
backend/tests/: test_api.py
docs/: README.md  account-summary.md  budgets.md  categories.md  debts.md  investments.md  loans.md  reminders.md  savings-goals.md  settings.md  transactions.md
src/: main.tsx
src/app/: index.tsx  router.tsx
src/app/layouts/: DashboardLayout.tsx
src/app/providers/: AppProviders.tsx  (+11 more)
src/shared/: index.ts
(+183 files in other folders)
